<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/mainappsetting"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:weightSum="1"
    android:visibility="visible"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/gauge_counter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gaugeselector"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_weight="3"
            android:entries="@array/gaugenumbers"
            android:entryValues="@array/gaugenumbers"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">
        <TextView
            android:text="@string/arch_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:textSize="16sp"

            />

        <EditText
            android:includeFontPadding="false"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/arch_width"
            android:textSize="16sp"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:layout_weight="3" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/arch_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/def_color_selector"
            android:onClick="showcolorpicker"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/warn1_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/warn1_color_selector"
            android:onClick="showcolorpicker"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/warn2_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/warn2_color_selector"
            android:onClick="showcolorpicker"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/text_color_selector"
            android:onClick="showcolorpicker"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/needle_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:id="@+id/needle_color_selector"
            android:onClick="showcolorpicker"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="16sp"

            />

        <Spinner
            android:id="@+id/layout_style_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="2"
            />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/parrent_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:layout_gravity="center"
            android:onClick="doPreview"/>
    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:id="@+id/notorque"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:visibility="gone" >
        <TextView
            android:text="@string/notorque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            />
    </LinearLayout>
</FrameLayout>
    </ScrollView>
