<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/front_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text=""
            android:id="@+id/front_left_pressure"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:onClick="pidwatcher"
            />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/front_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text=""
            android:id="@+id/front_right_pressure"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:onClick="pidwatcher"
            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/rear_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text=""
            android:id="@+id/rear_left_pressure"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:onClick="pidwatcher"
            />

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/rear_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text=""
            android:id="@+id/rear_right_pressure"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:onClick="pidwatcher"
            />

    </LinearLayout>

</LinearLayout>